<resources>
    <string name="app_name">Health Project</string>
    <!-- Strings related to forgot -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Passwords must be >5 characters and contain an upper case letter</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_email">"Email does not exist"</string>
    <string name="desc">University of Bristol Sport</string>
    <string name="sign_up">Sign Up</string>
    <string name="events">Events</string>
    <string name="retype">Retype Password</string>
    <string name="create"> Create Event</string>
    <string name="spaces">Spaces</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_date">Enter Date</string>
    <string name="event_start">event_start</string>
    <string name="create_event">Create Event</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="venues">Venues</string>
    <string name="profile">Profile</string>
    <string name="manage_events">Manage Events</string>
    <string name="register_failed">Register Failed</string>
    <string name="success_string">Enjoy the App!</string>
    <string name="event_name_error">Invalid Event Name</string>
    <string name="event_time_error">Time Invalid</string>
    <string name="attendee_error">Invalid Number of Attendees</string>
    <string name="date_invalid">Date Invalid</string>
    <string name="manage_event">Manage Event</string>
    <string name="filter">Filter</string>
    <string name="interested">Interested</string>
    <string name="delete_event">Delete</string>
    <string name="update_event">Update</string>
    <string name="search">Search by Name</string>
    <string name="unsubscribe">Unsubscribe</string>


</resources>
